Refactor: final code cleanup, removed unused variables and fixed IDE warnings prior to submission